a better way to solve horizontal jumping problem

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -1,7 +1,9 @@
 /* Override some defaults */
+html {
+  min-height: 100.2%;
+}
 html, body {
   background-color: #eee;
-  overflow-y: scroll;
 }
 
 }
